; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/fc660c/extr_matrix.c_SET_COL.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/fc660c/extr_matrix.c_SET_COL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PORTB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @SET_COL to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SET_COL(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @PORTB, align 4
  %4 = and i32 %3, 224
  %5 = load i32, i32* %2, align 4
  %6 = and i32 %5, 8
  %7 = icmp ne i32 %6, 0
  %8 = zext i1 %7 to i64
  %9 = select i1 %7, i32 16, i32 8
  %10 = or i32 %4, %9
  %11 = load i32, i32* %2, align 4
  %12 = and i32 %11, 7
  %13 = or i32 %10, %12
  store i32 %13, i32* @PORTB, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
